@@ -505,7 +505,7 @@ class WFDieselFacet extends WFWidget implements WFDieselSearchHelperStateTrackin
     
     function removeFacetLink($linkText = "Remove")
     {
-        return "<a onClick=\"facetHandleClick(event);\" href=\"" . $this->parent()->baseURL() . '/' . urlencode($this->dieselSearchHelper->getQueryState($this->attributeID())) . "\">{$linkText}</a>";
+        return "<a onClick=\"facetHandleClick(this.href); return false\" href=\"" . $this->parent()->baseURL() . '/' . urlencode($this->dieselSearchHelper->getQueryState($this->attributeID())) . "\">{$linkText}</a>";
     }
 
     function editFacetLink($linkText = "Edit", $class = NULL)
@@ -536,8 +536,7 @@ class WFDieselFacet extends WFWidget implements WFDieselSearchHelperStateTrackin
                         if(select.options[index].value != initialSelection)
                         {
                             newURL = '{$baseLink}|EQ_{$this->attributeID}=' + select.options[index].value; 
-                            facetHandleClick();
-                            window.location.href = newURL;
+                            facetHandleClick(newURL);
                         }
                         break;
                     }
@@ -706,7 +705,7 @@ END;
         else
         {
             $link = $this->parent()->baseURL() . '/' . urlencode($this->dieselSearchHelper->getQueryState($this->attributeID, $newAttrQueries));
-            $html .= "<span {$classHTML}><a onClick=\"facetHandleClick(event);\" href=\"{$link}\"$fullLabelAsTooltip>{$label}</a>";
+            $html .= "<span {$classHTML}><a onClick=\"facetHandleClick(this.href); return false;\" href=\"{$link}\"$fullLabelAsTooltip>{$label}</a>";
             if ($this->showItemCounts)
             {
                 $html .= ' (' . $facet->getHits() . ')';
